# world-cup-predictor

./: .gitignore  README.md  pyproject.toml
code/: clean_data.py  extract_features.py  import_data.py  main.py  select_model.py  simulate_tournament.py
lookup/: confederation_mapping.csv
scripts/: main.py
src/soccer/: __init__.py  clean_data.py  diagnostics.py  extract_features.py  select_model.py  simulate_draw.py  simulate_tournament.py  track_and_update_elos.py
